fix: fix database search for contracts